# crossover

./: .gitignore  .prettierrc  CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  readme.md  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: crossover-ci.yml  release.yml
src-frontend/: main.ts  settings.ts
src-frontend/styles/: _variables.scss  index.scss  settings.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  crosshair.rs  hotkeys.rs  main.rs  mouse.rs  state.rs  tray.rs  window.rs
