[package]
name = "crossover"
version = "4.0.0"
description = "A Crosshair Overlay for any screen"
authors = ["Lacy Morrow <me@lacymorrow.com>"]
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/lacymorrow/crossover"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSObject", "NSString"] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSWindow",
    "NSResponder",
    "NSView",
    "NSScreen",
    "NSRunningApplication",
    "NSGraphics",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
